updates specs
